agent-infra/manifests/repo-agent/api-deployment.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# you may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pr-review-api
  namespace: repo-agent-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pr-review-api
  template:
    metadata:
      labels:
        app: pr-review-api
    spec:
      serviceAccountName: pr-review-api
      containers:
      - name: api
        image: ko://repo-agent/review-ui/images/review-api # This will be built locally
        ports:
        - containerPort: 8080
